--- a/QtPasswordBook/QtPasswordBook.vcxproj
+++ b/QtPasswordBook/QtPasswordBook.vcxproj
@@ -89,6 +89,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SimpleCrypt.cpp" />
     <QtRcc Include="QtPasswordBook.qrc" />
     <QtMoc Include="QtPasswordBook.h" />
     <ClCompile Include="PasswordData.cpp" />
@@ -97,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Credentials.h" />
+    <ClInclude Include="SimpleCrypt.h" />
     <QtMoc Include="PasswordData.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
