--- a/QtPasswordBook/QtPasswordBook.vcxproj.filters
+++ b/QtPasswordBook/QtPasswordBook.vcxproj.filters
@@ -40,9 +40,15 @@
     <ClCompile Include="PasswordData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SimpleCrypt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Credentials.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SimpleCrypt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
